--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,11 @@
         <version>0.11.5</version> <scope>runtime</scope>
     </dependency>
 
-
+    <dependency>
+        <groupId>org.greenrobot</groupId>
+        <artifactId>eventbus</artifactId>
+        <version>3.3.1</version>
+    </dependency>
 
 
     <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
