--- a/pom.xml
+++ b/pom.xml
@@ -52,15 +52,14 @@
     </parent>
 
     <repositories>
+
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
         <!-- 添加额外的仓库 -->
-        <repository>
-            <id>0110.be repository</id>
-            <url>https://mvn.0110.be/releases</url>
-        </repository>
-        <repository>
-            <id>opencv-repo</id>
-            <url>https://raw.github.com/opencv/opencv/master</url>
-        </repository>
+
+
     </repositories>
 
 <dependencies>
@@ -87,11 +86,14 @@
         <version>0.11.5</version> <scope>runtime</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.greenrobot/eventbus -->
+    <!--
     <dependency>
         <groupId>org.greenrobot</groupId>
         <artifactId>eventbus</artifactId>
         <version>3.3.1</version>
     </dependency>
+-->
 
 
     <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
@@ -99,6 +101,12 @@
         <groupId>javax.validation</groupId>
         <artifactId>validation-api</artifactId>
         <version>2.0.1.Final</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+    <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>1.17.2</version>
     </dependency>
 
 
@@ -721,8 +729,12 @@
             <artifactId>kotlin-test</artifactId>
             <version>2.1.0</version>
         </dependency>
+    <dependency>
+        <groupId>org.jetbrains.kotlinx</groupId>
+        <artifactId>kotlinx-coroutines-core</artifactId>
+    </dependency>
 
-    </dependencies>
+</dependencies>
 
 
 
