--- a/src/spy.properties
+++ b/src/spy.properties
@@ -2,7 +2,7 @@
 modulelist=custom,logfile
 
 # 让 SQL 语句完整显示，包括参数值
-logMessageFormat=com.p6spy.engine.logging.format.SingleLineFormat
+logMessageFormat=com.p6spy.engine.spy.appender.SingleLineFormat
 
 # 记录 SQL 日志文件路径（可选）
 logfile=spy.log
