--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -62,6 +62,71 @@ security:
   - BearerAuth88: []  # 全局应用 JWT 认证
 
 paths:
+  /admin/qryUsr:
+   get:
+    tags:
+       - user
+    summary: 查询用户
+    description: 根据用户名分页查询用户列表。
+    parameters:
+      - name: uname
+        in: query
+        required: false
+        schema:
+          type: string
+        description: 用户名（模糊匹配）
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          default: 1
+          minimum: 1
+        description: 当前页码
+      - name: pagesize
+        in: query
+        required: false
+        schema:
+          type: integer
+          default: 20
+          minimum: 1
+          maximum: 1000
+        description: 每页数量
+    responses:
+      '200':
+        description: 返回用户列表
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                code:
+                  type: integer
+                  example: 0
+                  description: 返回码，0 表示成功
+                msg:
+                  type: string
+                  example: OK
+                total:
+                  type: integer
+                  description: 用户总数
+                data:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                        example: "1001"
+                      username:
+                        type: string
+                        example: "008"
+                      email:
+                        type: string
+                        example: "008@example.com"
+                      status:
+                        type: string
+                        example: "active"
   /post2:
     post:
       summary: 提交参数 a 和 b
