--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
 
 <dependencies>
 
+
+    <dependency>
+        <groupId>com.fatboyindustrial.gson-javatime-serialisers</groupId>
+        <artifactId>gson-javatime-serialisers</artifactId>
+        <version>1.1.1</version>
+    </dependency>
+
 <!-- vldr   -->
     <dependency>
         <groupId>jakarta.validation</groupId>
