--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 
 <dependencies>
 
+    <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf</artifactId>
+        <version>3.1.1.RELEASE</version> <!-- 最新稳定版本 -->
+    </dependency>
 
     <dependency>
         <groupId>com.fatboyindustrial.gson-javatime-serialisers</groupId>
