--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -70,6 +70,8 @@ security:
 paths:
   /reg:
     $ref: './paths/usr/reg.yaml'
+  /login:
+    $ref: './paths/usr/login.yaml'
   /admin/adm/add:
     $ref: './paths/admin/adm/add.yaml'
   /admin/adm/list:
@@ -309,48 +311,8 @@ paths:
           required: true
           schema:
             type: string
-  /login:
-    get:
-      tags:
-        - user
-      summary: "登录用户的方法"
-      description: " "
 
-      parameters:
-        - name: uname
-          in: query
-          description: "用户名"
-          required: true
-          schema:
-            type: string
-        - name: pwd
-          in: query
-          description: "密码"
-          required: true
-          schema:
-            type: string
 
-      responses:
-        "200":
-          description: "登录成功"
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: "ok"
-        "500":
-          description: 登录失败"
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  errcode:
-                    type: string
-                    example: "user pwd err"
-                  errmsg:
-                    type: string
-                    example: "错误用户名"
 
 
   /users/me:
