--- a/docRestApi/paths/usr/SetWthdrPwdHdr.yaml
+++ b/docRestApi/paths/usr/SetWthdrPwdHdr.yaml
@@ -3,9 +3,14 @@ get:
   tags:
     - user
   summary: IsSetWthdrPwdHdr
-  description:  IsSetWthdrPwdHdr
-
-
+  description:
+  parameters:
+    - name: pwd
+      in: query
+      description: "密码"
+      required: true
+      schema:
+        type: string
 
     # 如果 DTO 中还有其它字段，比如 code, newPassword，可以继续加上
   responses:
@@ -20,6 +25,6 @@ get:
             message: "ok"
             body: false
             timestamp: 1744867243751
-            path: "/user/IsSetWthdrPwdHdr"
+            path: ""
             requestId: "reqid__12370dba-202c-4321-bcac-e8f8247919b0"
             debugInfo: { }
