--- a/docRestApi/paths/cfg/GetRechargeConfigHdlr.yaml
+++ b/docRestApi/paths/cfg/GetRechargeConfigHdlr.yaml
@@ -1,6 +1,6 @@
 get:
   tags:
-    - admin_cfg
+    - cfg
   summary: "获取充值配置"
   description: " 。。。。"
   operationId: "GetRechargeConfigHdlr"
@@ -8,4 +8,4 @@ get:
 
   responses:
     "200":
-      $ref: '../../../components/responses/CommonResponse.yaml'
+      $ref: '../../components/responses/CommonResponse.yaml'
