--- a/docRestApi/components/responses/CommonResponse.yaml
+++ b/docRestApi/components/responses/CommonResponse.yaml
@@ -15,9 +15,9 @@ content:
         body:
           description: 实际返回数据（可为对象或数组）
           oneOf:
-                - type: string
                 - type: object
                 - type: array
+                - type: string
         data:
-          type: string
+          type: object
           description: 返回内容（冗余字段，可选）
