--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -75,6 +75,8 @@ security:
   - JwtAuth88: []  # 全局应用 JWT 认证
 
 paths:
+  /user/ModifyPwdHdr:
+    $ref: './paths/usr/ModifyPwdHdr.yaml'
   /cfg/GetRechargeConfigHdlr:
     $ref: './paths/cfg/GetRechargeConfigHdlr.yaml'
   /reg:
@@ -306,26 +308,7 @@ paths:
       tags:
         - user
       summary: "退出"
-  /modifyPwd:
-    get:
-      tags:
-        - user
-      summary: "修改密码"
-      description: " "
 
-      parameters:
-        - name: oldpwd
-          in: query
-          description: "旧密码"
-          required: true
-          schema:
-            type: string
-        - name: newpwd
-          in: query
-          description: "新密码"
-          required: true
-          schema:
-            type: string
 
 
 
