--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -78,6 +78,8 @@ security:
   - JwtAuth88: []  # 全局应用 JWT 认证
 
 paths:
+  /admin/ylwlt/ListBetWinLogHdl:
+    $ref: './paths/adm_wlt/ListBetWinLogHdl.yaml'
   /admin/wlt/QueryOrdChrgHdr:
     $ref: './paths/adm_wlt/QueryOrdChrgHdr.yaml'
   /admin/wlt/ReviewChrgPassHdr:
