--- a/docRestApi/paths/wlt/ListInvtCmsLogHdl.yaml
+++ b/docRestApi/paths/wlt/ListInvtCmsLogHdl.yaml
@@ -1,7 +1,7 @@
 get:
   tags:
     - Wallet
-  summary: "管理后台 钱包方面接口 邀请佣金列表"
+  summary: " 钱包方面接口 邀请佣金列表"
   description: " 。。。。"
   operationId: "ListInvtCmsLogHdl"
 
