--- a/docRestApi/paths/adm_wlt/ReviewChrgRefuseHdr.yaml
+++ b/docRestApi/paths/adm_wlt/ReviewChrgRefuseHdr.yaml
@@ -1,6 +1,6 @@
 get:
   tags:
-    - adm_wlt
+    - Wallet
   summary: "管理后台 钱包方面接口 拒绝充值"
   description: " 。。。。"
   operationId: "QueryOrdChrgHdr11"
