--- a/docRestApi/paths/wlt/ListBetWinLogHdl.yaml
+++ b/docRestApi/paths/wlt/ListBetWinLogHdl.yaml
@@ -1,7 +1,7 @@
 get:
   tags:
     - Wallet
-  summary: "管理后台 钱包方面接口 投注盈利列表"
+  summary: " 钱包方面接口 投注盈利列表"
   description: " 。。。。"
   operationId: "ListBetWinLogHdl"
 
