--- a/docRestApi/paths/wlt/ListInsFdPoolLogHdl.yaml
+++ b/docRestApi/paths/wlt/ListInsFdPoolLogHdl.yaml
@@ -1,7 +1,7 @@
 get:
   tags:
     - Wallet
-  summary: "管理后台 钱包方面接口 保险资金池记录列表"
+  summary: " 钱包方面接口 保险资金池记录列表"
   description: " 。。。。"
   operationId: "ListInsFdPoolLogHdl"
 
