--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -46,7 +46,8 @@ tags:
     description: 管理端接口-会员管理
   - name: admin_rpt
     description: 管理端接口-报表管理
-
+  - name: invstRcd
+    description: 管理端接口-投资记录管理
   - name: adm_wlt
     description: 管理后台——钱包方面接口
   - name: role
@@ -85,6 +86,12 @@ security:
   - JwtAuth88: []  # 全局应用 JWT 认证
 
 paths:
+  /admin/InvstRcd/AddInvstRcdHdl:
+    $ref: './paths/InvstRcd/AddInvstRcdHdl.yaml'
+  /admin/InvstRcd/QryInvstRcdHdl:
+    $ref: './paths/InvstRcd/QryInvstRcdHdl.yaml'
+
+
   /cfg/IniDataHdl:
     $ref: './paths/cfg/IniDataHdl.yaml'
   /cfg/GetCfg?k=DataSummary:
