--- a/docPrj/DocDeprecated/dep.yml
+++ b/docPrj/DocDeprecated/dep.yml
@@ -1,5 +1,42 @@
 - name: bet
   description: 注单方面接口
+  /ylwlt/withdraw:
+    get:
+      tags:
+        - ylWallet
+      summary: 提现
+      description: |
+        该接口用于进行提现操作，提现会导致有效金额变化，冻结金额也会变化，最终导致总金额变化。
+      parameters:
+        - name: amount
+          in: query
+          description: 提现金额
+          required: true
+          schema:
+            type: integer
+            example: 7
+        - name: uname
+          in: cookie
+          description: 用户名
+          required: true
+          schema:
+            type: string
+            example: john_doe
+      responses:
+        '200':
+          description: 操作成功，返回提现后的账户信息。
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: "提现成功，账户余额已更新"
+
 
 
   /recharge_callback:
